# Zabbix-PHP-Module

./: .gitignore  .travis.yml  GetPathDir.c  GetPathDir.h  LICENSE.md  Makefile.in  README  README.md  _config.yml  ax_lib_php.m4  bootstart.sh  config.h.in  configure.ac  php_embeded.c  php_embeded.h  zbx_php.c  zbx_php.h  zbx_php_config.h.in
.github/workflows/: build.yaml
m4/: ax_lib_php.m4  ax_zabbix.m4
scripts_examples/: all.php  echo.php  keyname.php  overtime.php  sleep.php  time.php  timeout.php
